# fluentci-engine

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  dagger.json  flake.nix
.fluentci/: README.md  ci.ts  deno.json  deps.ts  e2e.ts  mod.ts
.fluentci/fixtures/: .gitlab-ci.yml  azure-pipelines.yml  buildspec.yml  config.yml  workflow.yml
.fluentci/sdk/: builder.ts  client.gen.ts  client.ts  connect.ts  utils.ts
.fluentci/sdk/common/: utils.ts
.fluentci/sdk/common/errors/: types.ts  (+6 more)
.fluentci/src/: helpers.ts  jobs.ts  mod.ts  runner.ts
.fluentci/src/aws/: config.ts
.fluentci/src/azure/: config.ts
.fluentci/src/circleci/: config.ts
.fluentci/src/dagger/: index.ts  jobs.ts  lib.ts  pipeline.ts  runner.ts
.fluentci/src/github/: config.ts
.fluentci/src/gitlab/: config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  flakehub-publish-tagged.yml  flakestry-publish.yml  release-for-mac.yml  release.yml
codegen/: main.ts  schema.json
codegen/demo/: main.ts
codegen/demo/sdk/: builder.ts  client.gen.ts
codegen/src/: introspect.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: call.rs  mod.rs  run.rs  serve.rs
crates/client/: Cargo.toml
crates/client/src/: devbox.rs  devenv.rs  envhub.rs  flox.rs  pixi.rs  pkgx.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  common.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  http.rs  lib.rs  mise.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  proto.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: deps.rs  edge.rs  lib.rs  vertex.rs
crates/ext/: Cargo.toml
crates/ext/src/: cache.rs  devbox.rs  devenv.rs  envhub.rs  flox.rs  git.rs  git_checkout.rs  git_last_commit.rs  hermit.rs  http.rs  lib.rs  mise.rs  nix.rs  pixi.rs  pkgx.rs  proto.rs  runner.rs  service.rs
crates/ext/src/archive/: mod.rs  unzip.rs  zip.rs
crates/ext/src/archive/tar/: czvf.rs  mod.rs  xzvf.rs
crates/ext/src/cache/: gcs.rs  mod.rs  s3.rs
crates/ext/src/hash/: md5.rs  mod.rs  sha256.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs
crates/graphql/src/schema/: cache.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  http.rs  mise.rs  mod.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  proto.rs  secrets.rs  service.rs
crates/graphql/src/schema/objects/: cache.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  mise.rs  mod.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  proto.rs  secret.rs  secret_manager.rs  service.rs
crates/logging/: Cargo.toml
crates/logging/src/: baselime.rs  lib.rs
crates/pdk/: Cargo.toml
crates/pdk/src/: cache.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  lib.rs  mise.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  proto.rs  secret.rs  secret_manager.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: aws.rs  azure.rs  convert.rs  google.rs  lib.rs  vault.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: cache.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  http.rs  lib.rs  mise.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  proto.rs  shared.rs  state.rs
crates/types/: Cargo.toml
crates/types/src/: cache.rs  devbox.rs  devenv.rs  directory.rs  envhub.rs  file.rs  flox.rs  git.rs  hermit.rs  lib.rs  mise.rs  nix.rs  pipeline.rs  pixi.rs  pkgx.rs  process_compose.rs  proto.rs  secret.rs  service.rs
docs/: api.md
examples/archive/: Cargo.toml
examples/archive/src/: lib.rs
examples/chmod/: Cargo.toml
examples/chmod/src/: lib.rs
examples/devbox/: Cargo.toml
examples/devbox/src/: lib.rs
examples/env/: Cargo.toml
examples/env/src/: lib.rs
examples/flox/: Cargo.toml
examples/flox/src/: lib.rs
examples/git/: Cargo.toml
examples/git/src/: lib.rs
examples/hash/: Cargo.toml
examples/hash/src/: lib.rs
examples/hermit/: Cargo.toml
examples/hermit/src/: lib.rs
examples/http/: Cargo.toml
examples/http/src/: lib.rs
examples/mise/: Cargo.toml
examples/mise/src/: lib.rs
examples/module/: Cargo.toml
examples/module/src/: lib.rs
examples/nix/: Cargo.toml
examples/nix/src/: lib.rs
examples/pixi/: Cargo.toml
examples/pixi/src/: lib.rs
examples/pkgx/: Cargo.toml
examples/pkgx/src/: lib.rs
examples/proto/: Cargo.toml
examples/proto/src/: lib.rs
examples/vault/: Cargo.toml
examples/vault/src/: lib.rs
fixtures/: .gitignore  devbox.graphql  devenv.graphql  directory.graphql  envhub.graphql  flox.graphql  git.graphql  hermit.graphql  md5.graphql  mise.graphql  nix.graphql  pixi.graphql  pkgx.graphql  proto.graphql  sha256.graphql  tar-czvf.graphql  tar-xzvf.graphql  unzip.graphql  zip.graphql
fixtures/devbox-demo/: devbox.json
fixtures/devenv-demo/: .gitignore
fixtures/envhub-demo/: envhub.hcl
fixtures/envhub-demo/dotfiles/: .zshrc
fixtures/flox-demo/.flox/: env.json
fixtures/mise-demo/: .mise.toml
fixtures/nix-demo/: flake.nix
fixtures/pixi-demo/: pixi.toml
fixtures/pkgx-demo/: pkgx.yml
fixtures/pkgx-demo/.flox/: env.json
sdk/gleam/: LICENSE  README.md  gleam.toml
sdk/gleam/demo/: .gitignore  README.md  gleam.toml  manifest.toml
sdk/gleam/src/: dagger_ffi.mjs  fluentci.gleam  fluentci_ffi.mjs
sdk/purescript/: README.md
sdk/purescript/demo/: .gitignore  README.md  bun.lockb  index.ts  package.json  packages.dhall  spago.dhall
sdk/purescript/demo-dagger/: README.md  bun.lockb  package.json  packages.dhall  spago.dhall
sdk/rescript/: README.md  bun.lockb  package.json  rescript.json
sdk/rescript/demo/: bun.lockb  package.json  rescript.json
sdk/rescript/src/: Dagger.res.mjs  FluentCI.res  FluentCI.res.mjs  Plugin.res  Plugin.res.mjs
sdk/typescript/: README.md  deno.json  deps.ts  mod.ts
sdk/typescript/demo/: deno.json  main.ts
sdk/typescript/demo-ext/: .gitignore  README.md  bun.lockb  esbuild.js  package.json
sdk/typescript/src/: client.gen.ts  client.ts  context.ts  plugin.ts  utils.ts
(+161 files in other folders)
