[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
edition = "2021"
license = "MPL-2.0"
name = "fluentci-engine"
repository = "https://github.com/fluentci-io/fluentci"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
fluentci-server = {path = "../server", version = "0.1.0"}
tokio = {version = "1.36.0", features = ["tokio-macros", "macros", "rt", "rt-multi-thread"]}
