[package]
edition = "2021"
name = "fluentci-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dirs = "5.0.1"
fluentci-core = {path = "../core", version = "0.1.4"}
fluentci-ext = {path = "../ext", version = "0.1.4"}
fluentci-types = {path = "../types", version = "0.1.0"}
regex = "1.10.4"
sha256 = "1.5.0"
uuid = "1.8.0"
