[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities", "development-tools"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "wasm", "devops"]
license = "MPL-2.0"
name = "fluentci-core"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
dirs = "5.0.1"
fluentci-ext = {path = "../ext", version = "0.2.0"}
fluentci-logging = {path = "../logging", version = "0.1.0"}
fluentci-secrets = {path = "../secrets", version = "0.1.0"}
fluentci-types = {path = "../types", version = "0.1.6"}
hex = "0.4.3"
hmac = "0.12.1"
opentelemetry = {version = "0.22.0", features = ["trace", "pin-project-lite"]}
opentelemetry-jaeger = "0.21.0"
opentelemetry-otlp = {version = "0.15.0", features = ["http-proto", "reqwest-rustls", "reqwest-client", "grpc-tonic"], default-features = false}
opentelemetry-zipkin = {version = "0.20.0", features = ["reqwest-rustls", "reqwest-client"], default-features = false}
opentelemetry_sdk = {version = "0.22.1", features = ["tokio", "rt-tokio", "trace"]}
owo-colors = "4.0.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tokio = "1.36.0"
uuid = {version = "1.7.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]}
