[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
edition = "2021"
license = "MPL-2.0"
name = "fluentci-ext"
repository = "https://github.com/fluentci-io/fluentci"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
fluentci-types = {path = "../types"}
owo-colors = "4.0.0"
regex = "1.10.3"
reqwest = {version = "0.11.26", features = ["rustls-tls", "blocking"], default-features = false}
sha256 = "1.5.0"
users = "0.11.0"
