[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities", "development-tools"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "cd", "devops"]
license = "MPL-2.0"
name = "fluentci-ext"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
fluentci-types = {path = "../types", version = "0.1.0"}
owo-colors = "4.0.0"
regex = "1.10.3"
reqwest = {version = "0.11.26", features = ["rustls-tls", "blocking"], default-features = false}
sha256 = "1.5.0"
users = "0.11.0"
