[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "cd", "devops"]
license = "MPL-2.0"
name = "fluentci-graphql"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-graphql = "7.0.2"
async-graphql-actix-web = "7.0.2"
dirs = "5.0.1"
fluentci-core = {path = "../core", version = "0.1.2"}
fluentci-ext = {path = "../ext", version = "0.1.2"}
fluentci-types = {path = "../types", version = "0.1.0"}
regex = "1.10.3"
tokio = "1.36.0"

uuid = {version = "1.7.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]}
