[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities", "development-tools"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "cd", "devops"]
license = "MPL-2.0"
name = "fluentci-pdk"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.1.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.1.0"
fluentci-types = {path = "../types", version = "0.1.4"}
serde = {version = "1.0.197", features = ["serde_derive", "derive"]}
