[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "wasm", "devops"]
license = "MPL-2.0"
name = "fluentci-secrets"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.80"
azure_core = {version = "0.8.0", default-features = false, features = ["enable_reqwest_rustls"]}
azure_identity = {version = "0.9.0", default-features = false, features = ["enable_reqwest_rustls"]}
azure_security_keyvault = {version = "0.8.0", default-features = false, features = ["enable_reqwest_rustls"]}
base64 = {version = "0.21.0"}
fluentci-types = {path = "../types", version = "0.1.8"}
futures = "0.3.26"
google-secretmanager1 = {version = "4.0.1"}
reqwest = {version = "0.11.14", default-features = false, features = ["rustls-tls", "json"]}
rusoto_core = {version = "0.48.0", default-features = false, features = ["rustls"]}
rusoto_credential = {version = "0.48.0"}
rusoto_secretsmanager = {version = "0.48.0", default-features = false, features = ["rustls"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.92"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["rt", "rt-multi-thread", "macros"]}
