[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities", "development-tools"]
description = "Programmable CI/CD engine without Containers, built on top of Nix ❄️"
edition = "2021"
keywords = ["nix", "environment", "ci", "cd", "devops"]
license = "MPL-2.0"
name = "fluentci-shared"
repository = "https://github.com/fluentci-io/fluentci-engine"
version = "0.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism = "1.2.0"
extism-pdk = "1.1.0"
fluentci-common = {path = "../common", version = "0.1.4"}
fluentci-core = {path = "../core", version = "0.1.5"}
fluentci-ext = {path = "../ext", version = "0.1.5"}
fluentci-types = {path = "../types", version = "0.1.4"}
serde = {version = "1.0.197", features = ["serde_derive", "derive"]}
uuid = {version = "1.8.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]}
