[package]
edition = "2021"
name = "module"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
extism-pdk = "1.1.0"
fluentci-pdk = {path = "../../crates/pdk", version = "0.1.6"}
fluentci-types = {path = "../../crates/types", version = "0.1.2"}
