[package]
edition = "2021"
name = "vault"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
extism-pdk = "1.1.0"
fluentci-pdk = {path = "../../crates/pdk", version = "0.2.0"}
